--- a/Back-end/pom.xml
+++ b/Back-end/pom.xml
@@ -108,6 +108,13 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+        <!-- OAuth2 Client -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-client</artifactId>
+            <version>6.4.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
