Profile Controller Updated -
Post Reaction Logic Completed.

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -11,9 +11,9 @@ server.port=8080
 
 # Hibernate Config
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.open-in-view=false
 spring.main.allow-bean-definition-overriding=true
 
@@ -24,6 +24,8 @@ spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 
 # Logging Configuration
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.security.oauth2=DEBUG
 
