--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -11,9 +11,9 @@ server.port=8080
 
 # Hibernate Config
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.open-in-view=false
 spring.main.allow-bean-definition-overriding=true
 
