Profile Controller Updated

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=07614
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JSON Config
+spring.jackson.stream-write-constraints.max-nesting-depth=2000
+
 # ServerPort
 server.port=8080
 
