--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -26,12 +26,6 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-sK_qOuUgk
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 
-# Logging Configuration
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#logging.level.org.springframework.security=DEBUG
-#logging.level.org.springframework.security.oauth2=DEBUG
-
 # Facebook OAuth2 Configuration
 spring.security.oauth2.client.registration.facebook.client-id=YOUR_FACEBOOK_CLIENT_ID
 spring.security.oauth2.client.registration.facebook.client-secret=YOUR_FACEBOOK_CLIENT_SECRET
@@ -52,6 +46,13 @@ cloudinary.cloud-name=dmbxwetlk
 cloudinary.api-key=498997394873736
 cloudinary.api-secret=bt0s6XIvUebSPRc4dsZbDa2MLiU
 
+## Agora configuration
+#agora.app.id=428728982af04de9902f5f12ffd88b21
+#agora.app.certificate=8c2e4e0929714f28918e52c81058e546
+#
+## WebSocket configuration
+#spring.websocket.path=/ws
+
 # File Upload Limits
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
@@ -59,10 +60,6 @@ spring.servlet.multipart.max-request-size=100MB
 ## Execute import.sql on startup
 #spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
 #spring.sql.init.mode=always
-
-## File Upload
-#spring.servlet.multipart.max-file-size=10MB
-#spring.servlet.multipart.max-request-size=10MB
 
 
 
